# Todo_tasks

client/: Cargo.toml  schema.json
client/graphql/queries/: users.graphql
client/src/: main.rs
server/: Cargo.toml  Dockerfile  fly.toml
server/migrations/2022-12-22-173026_create_user/: up.sql
server/src/: main.rs  model.rs  mutation.rs  query.rs  schema.rs
server/src/entities/: users.rs
server/src/migrations/: m20220101_000001_create_user.rs  m20221223_182444_create_tasks.rs  mod.rs
