[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
async-graphql = "5.0.3"
async-graphql-actix-web = "5.0.3"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15.6"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
